2008-04-28  Srinivasa Ragavan  <sragavan@novell.com>

	* mail/em-format-html.c: Fix the Mailer header display

2008-04-25  Milan Crha  <mcrha@redhat.com>

	** Fix for bug #273041

	* mail.error.xml: (junk-check-error), (junk-report-error),
	(junk-not-report-error): New error messages added.
	* em-junk-hook.h: (struct _EMJunkHookTarget), (em_junk_error_quark):
	* em-junk-hook.c: (manage_error), (em_junk_check_junk),
	(em_junk_report_junk), (em_junk_report_non_junk):
	Allow propagation of the error from the plugin in the hook target.

2008-04-23  Milan Crha  <mcrha@redhat.com>

	* em-format-html-display.c: (efhd_update_bar):
	Compiler warning fix.

2008-04-23  Milan Crha  <mcrha@redhat.com>

	** Fix for bug #529375

	* evolution-mail.schemas.in:
	* mail-config.glade:
	* em-utils.h: (em_utils_in_addressbook):
	* em-utils.c: (em_utils_in_addressbook):
	* em-format-html.c: (emfh_gethttp):
	* mail-session.c: (lookup_addressbook):
	* mail-config.h: (mail_config_get_lookup_book_local_only):
	* mail-config.c: (struct MailConfig), (mail_config_init),
	(mail_config_get_lookup_book_local_only):
	* em-mailer-prefs.h: (struct _EMMailerPrefs):
	* em-mailer-prefs.c: (junk_book_lookup_button_toggled),
	(em_mailer_prefs_construct): Add new option
	/apps/evolution/mail/junk/lookup_addressbook_local_only
	to determine whether check for address in a local address book only.

2008-04-23  Milan Crha  <mcrha@redhat.com>

	** Fix for bug #529179

	* em-folder-browser.c: (struct _EMFolderBrowserPrivate),
	(labels_changed_idle_cb), (gconf_labels_changed), (emfb_destroy):
	Rebuild search menu rather on idle, then immediately after the change
	in gconf, because other parts may not have this change propagated yet.

2008-04-22  Matthew Barnes  <mbarnes@redhat.com>

	** Fixes bug #458505

	* mail-config.glade:
	One space between "Sender" and "Photograph".

2008-04-22  Matthew Barnes  <mbarnes@redhat.com>

	** Fixes bug #529462

	* evolution-mail.schemas.in: